drbd-9.0.25-2/drbd/.compat_test.4.18.20/have_security_netlink_recv.stderr
<command-line>:0:0: warning: "KBUILD_MODNAME" redefined
<command-line>:0:0: note: this is the location of the previous definition
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/have_security_netlink_recv.c:17:11: error: ‘security_netlink_recv’ undeclared here (not in a function); did you mean ‘security_netlink_send’?
 void *p = security_netlink_recv;
           ^~~~~~~~~~~~~~~~~~~~~
           security_netlink_send
